// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> Should match TextField select snapshot 1`] = `
<div
  className="root"
>
  <div
    className="textField normal active"
    onClick={[Function]}
  >
    <span
      className="arrow"
    >
      <svg
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M6.175 6.667L10 10.483l3.825-3.816L15 7.842l-5 5-5-5z"
            fill="currentColor"
            fillRule="nonzero"
          />
          <path
            d="M0 20h20V0H0z"
          />
        </g>
      </svg>
    </span>
    <div
      className="formGroup"
    >
      <div
        className="formLabel"
      >
        <span
          className="typo label activedLabel subTitle black left"
        >
          Country
        </span>
        <input
          className="input"
          hidden={true}
          onBlur={[Function]}
          onFocus={[Function]}
          readOnly={true}
          value="nKorea"
        />
        <div
          className="input inputSelect"
        >
          
        </div>
      </div>
    </div>
  </div>
  
</div>
`;

exports[`<TextField /> Should match textField snapshot 1`] = `
<div
  className="root"
>
  <div
    className="textField normal"
  >
    <div
      className="formGroup"
    >
      <div
        className="formLabel"
      >
        <span
          className="typo label subTitle black left"
        >
          Label
        </span>
        <input
          className="input"
          onBlur={[Function]}
          onFocus={[Function]}
        />
      </div>
    </div>
  </div>
  
</div>
`;
